# DSS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: FindCFITSIO.cmake
DeepSkyStacker/: DSSVersion.h
DeepSkyStacker_Qt/: About.cpp  AskRegistering.cpp  BatchStacking.h  CMakeLists.txt  CheckAbove.h  ClickLabel.cpp  CometStacking.cpp  CometStacking.h  DeepSkyStacker.cpp  DeepStackerDlg.cpp  DeepStackerDlg.h  ExplorerBar.cpp  ExplorerBar.h  FitsFilesTab.h  RawDDPSettings.h  ResultParameters.cpp  ResultParameters.h  StackSettings.cpp  StackSettings.h  StackingParameters.cpp  StackingParameters.h  resources.qrc  translations.qrc
DeepSkyStacker_Qt/i18n/: DSS_cs.ts  DSS_es.ts  DSS_it.ts  DSS_ru.ts  DSS_tr.ts
DeepSkyStacker_Qt/icon/: DeepSkyStacker.icns
DeepSkyStacker_Qt/ui/: About.ui  ExplorerBar.ui
LibRaw/: CMakeLists.txt
i18n/: DSS_ca.ts  DSS_cs.ts  DSS_de.ts  DSS_en.ts  DSS_es.ts  DSS_fr.ts  DSS_it.ts  DSS_nl.ts  DSS_pt.ts  DSS_ro.ts  DSS_ru.ts  DSS_tr.ts  DSS_zh.ts
qt/: About.cpp  About.h  About.ui  AlignmentParameters.cpp  AlignmentParameters.h  AlignmentParameters.ui  AskRegistering.cpp  AskRegistering.h  AskRegistering.ui  BackgroundOptions.cpp  BackgroundOptions.h  BackgroundOptions.ui  BatchStacking.cpp  CMakeLists.txt  CheckAbove.cpp  ClickLabel.cpp  ClickLabel.h  CometStacking.cpp  CometStacking.ui  DeepStackerDlg.cpp  DropFilesDlg.cpp  DropFilesDlg.h  ExplorerBar.cpp  ExplorerBar.h  ExplorerBar.ui  FitsFilesTab.cpp  FitsFilesTab.ui  PostCalibration.cpp  PostCalibration.ui  RawDDPSettings.cpp  RawDDPSettings.ui  RawFilesTab.cpp  RawFilesTab.h  RawFilesTab.ui  ResultParameters.cpp  StackSettings.cpp  StackSettings.h  main.cpp  resources.qrc
qt/i18n/: DSS_ca.ts  DSS_de.ts  DSS_en.ts  DSS_fr.ts  DSS_nl.ts  DSS_pt.ts  DSS_ro.ts  DSS_ru.ts  DSS_zh.ts
